# kelishamiz-backend

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  sertificat.ai
Readme/: CONTRIBUTING.md  README.md
admin_profile/: apps.py  filters.py  serializers.py  urls.py  views.py
api/: urls.py
apps/admin_api/: apps.py  filters.py  serializers.py  urls.py  views.py
apps/ads/: admin.py  api.py  apps.py  models.py  schema.py  serializers.py  signals.py  views.py
apps/ads/migrations/: 0001_initial.py
apps/classified_statistics/: apps.py  models.py  serializers.py  views.py
apps/classified_statistics/models/: __init__.py  likes.py  views.py
apps/classifieds/: admin.py  apps.py  base.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  views.py
apps/likes/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
apps/payments/: admin.py  models.py  serializers.py  signals.py  views.py
apps/permissions/: apps.py  permissions.py
apps/promotions/: admin.py  apps.py  models.py
apps/site_settings/: admin.py  apps.py  models.py  serializers.py  views.py
apps/user_searches/: admin.py  apps.py  models.py  serializers.py
apps/users/: admin.py  constants.py  managers.py  models.py  serailizers.py  serializers.py  tasks.py  utils.py  views.py
config/: celery.py  settings.py  urls.py  utilities.py  utility.py
config/settings/: __init__.py  base.py  local.py  prod.py
deploy/gunicorn/: gunicorn.service
deploy/nginx/: default.conf  nginx.conf
deploy/supervisor/: gunicorn.conf
docker/backend/: Dockerfile  entrypoint.sh
docker/celery/: celerybeat  celeryd
docker/celery-flower/: Dockerfile  celery-flower.yaml  entry.sh
docker/celery-worker/: Dockerfile  celery-worker.yaml  entry.sh
docker/certbot/: certify-init.sh
docker/nginx/: default.conf
docker/proxy/: Dockerfile  run.sh
readme/: CODE_OF_CONDUCT.md
(+28 files in other folders)
