[tool.poetry]
name = "kelishamiz-backend"
version = "0.1.0"
description = ""
authors = ["murtazoxurramov <murtazoxurramov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
eskiz-sms = "^0.2.3"
django-phonenumbers = "^1.0.1"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.3.0"
pillow = "^10.0.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
django-filter = "^23.3"
django-cors-headers = "^4.3.0"
celery = "^5.3.4"
psycopg2-binary = "^2.9.9"
drf-nested-routers = "^0.93.4"
aiohttp = "^3.9.1"
payme-pkg = "^2.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
